--- a/src/manifest_chrome.json
+++ b/src/manifest_chrome.json
@@ -1,6 +1,6 @@
 {
    "name": "CloseTab",
-   "version": "1.3",
+   "version": "1.4",
    "minimum_chrome_version": "42",
    "description": "Add a \"Close tab\" entry to the page context menu",
    "default_locale": "en",
@@ -14,7 +14,13 @@
       "48": "img/logo48.png",
       "128": "img/logo128.png"
    },
-   "browser_action": {},
+   "browser_action": {
+      "default_icon": {
+         "19": "img/logo19.png",
+         "38": "img/logo38.png"
+      },
+      "default_title": "Close selected tab"
+   },
    "background": {
       "scripts": [
          "common.js",
