--- a/src/manifest_opera.json
+++ b/src/manifest_opera.json
@@ -1,17 +1,23 @@
 {
    "name": "CloseTab",
-   "version": "1.3",
+   "version": "1.4",
    "minimum_opera_version": "29",
    "description": "Add a \"Close tab\" entry to the page context menu",
    "default_locale": "en",
    "manifest_version": 2,
    "options_page": "options_tab.html",
    "icons": {
-      "16": "img/logo16.png",
+      "16": "img/logo16_opera.png",
       "48": "img/logo48.png",
       "128": "img/logo128.png"
    },
-   "browser_action": {},
+   "browser_action": {
+      "default_icon": {
+         "19": "img/logo19_opera.png",
+         "38": "img/logo38_opera.png"
+      },
+      "default_title": "Close selected tab"
+   },
    "background": {
       "scripts": [
          "common.js",
