--- a/src/manifest_chrome.json
+++ b/src/manifest_chrome.json
@@ -1,34 +1,32 @@
 {
-   "name": "CloseTab",
-   "version": "1.6",
-   "minimum_chrome_version": "42",
-   "description": "Add a \"Close tab\" entry to the page context menu",
-   "default_locale": "en",
-   "manifest_version": 2,
-   "options_ui": {
-      "page": "options_inline.html",
-      "chrome_style": true
-   },
-   "icons": {
-      "16": "img/logo16.png",
-      "48": "img/logo48.png",
-      "128": "img/logo128.png"
-   },
-   "browser_action": {
-      "default_icon": {
-         "19": "img/logo19.png",
-         "38": "img/logo38.png"
-      },
-      "default_title": "Close selected tab"
-   },
-   "background": {
-      "scripts": [
-         "common.js",
-         "bg.js"
-      ]
-   },
-   "content_security_policy": "script-src 'self'; object-src 'self'",
-   "permissions": [
-      "contextMenus"
-   ]
+  "name": "CloseTab",
+  "version": "1.7",
+  "minimum_chrome_version": "42",
+  "description": "Add a tab close action to the page context menu",
+  "default_locale": "en",
+  "manifest_version": 3,
+  "options_ui": {
+    "page": "options_inline.html",
+    "chrome_style": true
+  },
+  "icons": {
+    "16": "img/logo16.png",
+    "48": "img/logo48.png",
+    "128": "img/logo128.png"
+  },
+  "action": {
+    "default_icon": {
+      "19": "img/logo19.png",
+      "38": "img/logo38.png"
+    },
+    "default_title": "Close selected tab"
+  },
+  "background": {
+    "service_worker": "bg.js",
+    "type": "module"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
+  "permissions": ["contextMenus"]
 }
