--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "CloseTab",
-  "description": "A browser extension that adds a \"Close tab\" entry to the page context menu",
+  "description": "A browser extension that adds a tab close action to the page context menu",
   "keywords": [
     "browser",
     "extension",
     "tabs",
     "productivity"
   ],
-  "version": "1.5.0",
+  "version": "1.7",
   "author": {
     "name": "Hansifer"
   },
@@ -18,13 +18,5 @@
   },
   "bugs": {
     "url": "http://github.com/hansifer/CloseTab/issues"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "0.7.x",
-    "grunt-contrib-compress": "^0.14.0",
-    "grunt-contrib-copy": "0.8.x",
-    "grunt-contrib-jshint": "0.11.x"
   }
 }
