--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,7 @@
   "manifest_version": 3,
   "options_ui": {
     "page": "options_inline.html",
-    "chrome_style": true
+    "open_in_tab": false
   },
   "icons": {
     "16": "img/logo16.png",
