--- a/src/manifest_v2.json
+++ b/src/manifest_v2.json
@@ -22,7 +22,7 @@
     "default_title": "Close selected tab"
   },
   "background": {
-    "scripts": ["util.js", "storage.js", "bg.js"]
+    "scripts": ["config.js", "storage.js", "bg.js"]
   },
   "content_security_policy": "script-src 'self'; object-src 'self'",
   "permissions": ["contextMenus", "storage"]
