--- a/src_manifest_v2/manifest.json
+++ b/src_manifest_v2/manifest.json
@@ -4,17 +4,17 @@
   "minimum_chrome_version": "42",
   "description": "Add a tab close action to the page context menu",
   "default_locale": "en",
-  "manifest_version": 3,
+  "manifest_version": 2,
   "options_ui": {
     "page": "options_inline.html",
-    "open_in_tab": false
+    "chrome_style": true
   },
   "icons": {
     "16": "img/logo16.png",
     "48": "img/logo48.png",
     "128": "img/logo128.png"
   },
-  "action": {
+  "browser_action": {
     "default_icon": {
       "19": "img/logo19.png",
       "38": "img/logo38.png"
@@ -22,11 +22,8 @@
     "default_title": "Close selected tab"
   },
   "background": {
-    "service_worker": "bg.js",
-    "type": "module"
+    "scripts": ["config.js", "storage.js", "bg.js"]
   },
-  "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
-  },
-  "permissions": ["contextMenus"]
+  "content_security_policy": "script-src 'self'; object-src 'self'",
+  "permissions": ["contextMenus", "storage"]
 }
