--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.singleQuote": true,
   "prettier.trailingComma": "all",
-  "prettier.semi": false,
+  "prettier.semi": true,
   "prettier.singleAttributePerLine": true,
   "cSpell.words": ["hansifer"]
 }
