--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "version": "1.8.0",
   "author": {
-    "name": "hansifer"
+    "name": "Hans Meyer"
   },
   "homepage": "https://github.com/hansifer/close-tab",
   "repository": {
